<resources>
    <string name="app_name">Zayan\'s eShop</string>
    <string name="userName">UserName</string>
    <string name="e_mail">E-mail</string>
    <string name="textview">TextView</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="log_out">Log Out</string>
    <string name="profile_picture">Profile picture</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="account_header">Account</string>
    <string name="theme_header">App theme</string>

    <!-- Messages Preferences -->
    <string name="username_title">Edit username</string>
    <string name="phone_title">Edit phone</string>

    <!-- Sync Preferences -->
    <string name="dark_mode_title">Enable Dark mode</string>
    <string name="email_title">Edit e-mail</string>
    <string name="location_title">Edit location</string>
    <string name="pass_title">Change Password</string>

    <!-- Search Texts -->
    <string name="search_hint">Search for product</string>
    <string name="confirm_and_place_order">Confirm and Place Order</string>
    <string name="confirmation_dialogue">Please confirm that your phone number and location are correct before placing an order. If wrong, correct them from account section.</string>
    <string name="nothing_found">Nothing Found!</string>
    <string name="total">Total</string>
    <string name="contact_message">We\'d love to hear from you</string>
    <string name="contact_message2">Whether you have question about feature,trial,pricing or anything else we are here to answer all your questions</string>
    <string name="contact_us_by">Contact us by</string>
    <string name="zayan_s_eshop">Zayan\'s eShop</string>
    <string name="enjoy_best_shopping">Enjoy best shopping</string>
    <string name="start_now">Start now!!!</string>
    <string name="description">Description:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="by_price">By price</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="faq1_ans">First you need to have an account in the app. Create an account and log in. Go to a product and add the product to the cart. Then go to the cart and take delivery, setup or both to convenience. You can increase the product amount to order more than one of a product. Then tap the place order button and confirm your order.</string>
    <string name="faq2_ans">Sorry, but we do not provide password recovery options at the moment. It would be better if you would not forget the password. Still, if it happens, you can just create a new account.</string>
    <string name="p1title">Zayan\'s eShop</string>
    <string name="p1description">Your shop from home</string>
    <string name="p2title">Whole Muktagacha</string>
    <string name="p2description">We provide Home Delivery in whole Muktagacha</string>
    <string name="p3title">No setup hassle</string>
    <string name="p3description">We provide setup service for every product that needs it</string>
</resources>
