<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_header">

        <EditTextPreference
            app:key="userName"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="userPhone"
            app:title="@string/phone_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="userEmail"
            app:title="@string/email_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="userLocation"
            app:title="@string/location_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="saveSettings"
            app:title="Save account info" />

        <Preference
            app:key="changePassword"
            app:title="@string/pass_title" />

        <Preference
            app:key="logout"
            app:title="Log out" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Extras">

        <Preference
            app:summary="0.4"
            app:title="Version" />

    </PreferenceCategory>

</PreferenceScreen>
