<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/userinfoback"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="15dp"
                android:text="@string/userName"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                android:text=" E-mail"

                android:textColor="#AAB7B8"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="3dp"
                android:paddingBottom="3dp"
                android:text="@string/textview"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:text=" Phone"
                android:textColor="#AAB7B8"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="3dp"
                android:paddingBottom="3dp"
                android:text="@string/textview"
                android:textColor="@android:color/black"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:text="@string/location"
                android:textColor="#AAB7B8"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:paddingBottom="3dp"
                android:text="@string/textview"
                android:textColor="@android:color/black"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/title_activity_settings"
        android:src="@drawable/edit" />

    <include layout="@layout/header" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>